--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+@import url("https://fonts.googleapis.com/css?family=Girassol&display=swap&subset=latin-ext");
+@import url("https://fonts.googleapis.com/css?family=Courier+Prime&display=swap");
+header {
+  min-width: 1440px;
+  height: 75px;
+  background: linear-gradient(to left, rgb(255, 0, 0), white);
   display: flex;
-  flex-direction: column;
+  justify-content: flex-start;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+.name {
+  width: 235px;
+  font-size: 30px;
+  color: rgb(255, 0, 0);
+  margin: 0px;
+  margin-left: 20px;
+  font-family: "Girassol", cursive;
+}
+.day_week {
+  width: 43%;
+  height: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+.date {
+  font-family: "Courier Prime", monospace;
+  font-size: 20px;
+  margin: 0px;
+  background: linear-gradient(45deg, rgb(255, 0, 0) 33%, #3a8adf 66%, white);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.clock {
+  width: 25%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  position: fixed;
+  font-family: "Courier Prime", monospace;
+  font-size: 20px;
+  margin-left: 1200px;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
