--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
-@import url("https://fonts.googleapis.com/css?family=Girassol&display=swap&subset=latin-ext");
-@import url("https://fonts.googleapis.com/css?family=Courier+Prime&display=swap");
-@import url("https://fonts.googleapis.com/css?family=Ma+Shan+Zheng&display=swap");
-@import url("https://fonts.googleapis.com/css?family=Dosis&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Rubik&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Cabin&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Playfair+Display&display=swap");
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
