--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,19 +1,18 @@
 footer {
   width: 100%;
   height: 75px;
-  background: linear-gradient(to left, rgb(255, 0, 0), white);
+  background: #ffffff;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 footer p {
-  font-family: "Courier Prime", monospace;
-  font-size: 20px;
-  margin: 0px;
-  background: linear-gradient(45deg, rgb(255, 0, 0) 33%, #3a8adf 66%, white);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-clip: text;
+  font-family: "Cabin";
+  color: #1a2953;
+  font-weight: 600;
+  text-transform: uppercase;
+  font-size: 14px;
+  letter-spacing: 1.5px;
 }
 @media screen and (max-width: 420px) {
   footer {
