--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,45 +1,36 @@
 header {
-  max-width: 1520px;
+  min-width: 100%;
   height: 75px;
-  background: linear-gradient(to left, rgb(255, 0, 0), white);
+  background: #ffffff;
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-around;
   align-items: center;
 }
 .name {
-  width: 235px;
+  font-family: "Rubik";
+  color: #333333;
+  font-weight: 700;
   font-size: 30px;
-  color: rgb(255, 0, 0);
-  margin: 0px;
-  margin-left: 20px;
-  font-family: "Girassol", cursive;
-}
-.day_week {
-  width: 43%;
-  height: 100%;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
+  letter-spacing: -1px;
 }
 .date {
-  font-family: "Courier Prime", monospace;
-  font-size: 20px;
-  margin: 0px;
-  background: linear-gradient(45deg, rgb(255, 0, 0) 33%, #3a8adf 66%, white);
-  -webkit-text-fill-color: transparent;
-  background-clip: text;
+  font-family: "Cabin";
+  color: #535f7e;
+  font-weight: 400;
+  font-size: 15px;
+  letter-spacing: 0.5px;
+  line-height: 25px;
+}
+.clock_box {
+  width: 10%;
 }
 .clock {
-  width: 170px;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  position: fixed;
-  font-family: "Courier Prime", monospace;
-  font-size: 20px;
-  margin-left: 1320px;
-  color: white;
-  background-color: rgb(255, 0, 0);
+  font-family: "Cabin";
+  color: #535f7e;
+  font-weight: 400;
+  font-size: 15px;
+  letter-spacing: 0.5px;
+  line-height: 25px;
 }
 @media screen and (max-width: 1024px) {
   .clock {
